--- a/style.css
+++ b/style.css
@@ -140,9 +140,41 @@ ul {
 
 .boxes .box p {
   font-size: 18px;
-  color: #8c8d8f;
+  color: #a5a7aa;
   margin-top: 10px;
   margin-bottom: 50px;
   text-align: center;
+}
+
+.quote {
+  height: 440px;
+  background: #e5e7eb;
+}
+
+.quote .container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  height: 100%;
+  width: 50%;
+}
+
+.quote .container h2 {
+  padding-top: 80px;
+  flex-wrap: wrap;
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: 1.4;
+  color: #1F2937;
+}
+
+.quote .container h4 {
+  color: #1f2937;
+  width: 100%;
+  font-size: 18px;
+  font-weight: bolder;
+  text-align: right;
+  padding-bottom: 40px;
   
 }
