--- a/style.css
+++ b/style.css
@@ -231,3 +231,22 @@ ul {
   background: #5b97f8;
   color: #F9FAF8;
 }
+
+/*Footer*/
+
+.footer {
+  height: 100px;
+  background: #1f2937;
+}
+
+.footer .container {
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer .container h4 {
+  font-size: 18px;
+  color: #F9FAF8;
+}
